--- a/.github/workflows/release_dispatch.yml
+++ b/.github/workflows/release_dispatch.yml
@@ -196,7 +196,7 @@ jobs:
 
       - name: Download artifacts
         uses: dawidd6/action-download-artifact@v2
-
+        continue-on-error: true
       - name: Draft release
         working-directory: usg-transport
         env:
