fix(release_dispatch.yml)

--- a/.github/workflows/release_dispatch.yml
+++ b/.github/workflows/release_dispatch.yml
@@ -212,7 +212,7 @@ jobs:
       
           Visit the GSI USG-Transport website for information on USG-Transport: https://www.gsienv.com/product/modflow-usg
           '
-          gh release create "$ver" ../usg-transport*/usg-transport*.zip --target master --title "$title" --notes "$notes" --draft --latest
+          gh release create "$ver" ../usg-transport/usg-transport.zip --target master --title "$title" --notes "$notes" --draft --latest
 
   reset:
     name: Draft reset PR
