--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: modflow6
+name: usg-transport
 
 channels:
   - conda-forge
@@ -17,8 +17,6 @@ dependencies:
   - pip:
       - git+https://github.com/modflowpy/flopy.git
       - git+https://github.com/modflowpy/pymake.git
-      - git+https://github.com/Deltares/xmipy.git
-      - git+https://github.com/MODFLOW-USGS/modflowapi.git
       - modflow-devtools
   - pytest
   - pytest-cases
