--- a/.github/workflows/release_dispatch.yml
+++ b/.github/workflows/release_dispatch.yml
@@ -278,7 +278,5 @@ jobs:
           git push -u origin $reset_branch
 
           # create PR into develop
-          body='
-          Reinitialize the `develop` branch following a successful release.
-          '
+          body="Reinitialize the `develop` branch following a successful release."          '
           gh pr create -B "develop" -H "$reset_branch" --title "Reinitialize develop branch" --draft --body "$body"
