--- a/.github/workflows/release_dispatch.yml
+++ b/.github/workflows/release_dispatch.yml
@@ -206,7 +206,7 @@ jobs:
           ver=$(python distribution/update_version.py -g)
           title="USG-Transport $ver"
           notes='
-          USG-Transport '$ver' release for Flopy CI.
+          USG-Transport $ver release for Flopy CI.
       
           Visit the GSI USG-Transport website for information on USG-Transport: https://www.gsienv.com/product/modflow-usg
           '
