--- a/.github/workflows/release_dispatch.yml
+++ b/.github/workflows/release_dispatch.yml
@@ -214,7 +214,7 @@ jobs:
     name: Draft reset PR
     # runs only after GitHub release post is published (promoted from draft to public)
     # to bring release commits from master back into develop and reset IDEVELOPMODE=1.
-    if: github.event_name == 'release' && (inputs.reset == 'true' || inputs.reset == '')
+    if: ${{github.event_name == 'release' && (inputs.reset == 'true' || inputs.reset == '')}}
     runs-on: ubuntu-22.04
     defaults:
       run:
